--- a/src/jade/discover/index.jade
+++ b/src/jade/discover/index.jade
@@ -9,12 +9,10 @@ body.discover
 	+header("discover")
 	+nav()
 	main
-		section
-			.container
-				.page-hero.orange-gradient
-					.container
-						h1 Discover
-						p Integrating knowledge from the cognitive and brain sciences to open new frontiers in understanding human brain structure and function.
+		section.page-hero.orange-gradient
+			.container.split
+				h1 Discover
+				p.stretch Integrating knowledge from the cognitive and brain sciences to open new frontiers in understanding human brain structure and function.
 		section.news-section
 			.container
 				h2 News
