--- a/src/jade/educate/index.jade
+++ b/src/jade/educate/index.jade
@@ -9,15 +9,13 @@ body.discover
 	+header("educate")
 	+nav()
 	main
-		section
-			.container
-				.page-hero.green-gradient
-					.container
-						h2 Educate
-						p Connecting patients who have questions about a recent diagnosis to answers, students to educational resources, and scientists and clinicians to the latest tools for advancing knowledge and patient care.
+		section.page-hero.green-gradient
+			.container.split
+				h2 Educate
+				p.stretch Connecting patients who have questions about a recent diagnosis to answers, students to educational resources, and scientists and clinicians to the latest tools for advancing knowledge and patient care.
 		section.resources-for-patients-section
 			.container
-				h1 Resources for Patients
+				h2 Resources for Patients
 	
 	+footer()
 			
