--- a/src/jade/partials/_header.jade
+++ b/src/jade/partials/_header.jade
@@ -11,4 +11,4 @@ mixin header(pageHeaderTitle)
 				span.slug= pageHeaderTitle
 			.nav-toggle
 				span Menu
-				+icon("menu-icon")
+				+icon("menu")
