--- a/src/jade/partials/_svg.jade
+++ b/src/jade/partials/_svg.jade
@@ -1,19 +1,19 @@
 mixin svg()
 	svg(style="display: none", xmlns="http://www.w3.org/2000/svg")
-		symbol#menu-icon(viewbox="0 0 6 6")
+		symbol#menu(viewbox="0 0 6 6")
 			path(d="M1 1.5 L5 1.5 M1 3 L5 3 M1 4.5 L5 4.5", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round")
-		symbol#larr-icon(viewbox="0 0 6 6")
-			path(d="M1 3 L5 3 M1 3 L2.5 1.5 M1 3 L2.5 4.5", stroke="#fff", stroke-width="1", fill="none", stroke-linecap="round")
-		symbol#close-icon(viewbox="0 0 6 6")
-			path(d="M1 1 L5 5 M5 1 L1 5", stroke="#fff", stroke-width="1", fill="none", stroke-linecap="round")
-		symbol#zoom-out-icon(viewbox="0 0 7 7")
-			path(d="M1 3 a2 2 0 1 0 4 0 a2 2 0 1 0 -4 0 M4.5 4.5 L6 6 M2.5 3 L3.5 3", stroke="#fff", stroke-width="1", fill="none", stroke-linecap="round")
-		symbol#search-icon(viewbox="0 0 7 7")
+		symbol#larr(viewbox="0 0 6 6")
+			path(d="M1 3 L5 3 M1 3 L2.5 1.5 M1 3 L2.5 4.5", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round")
+		symbol#close(viewbox="0 0 6 6")
+			path(d="M1 1 L5 5 M5 1 L1 5", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round")
+		symbol#zoom-out(viewbox="0 0 7 7")
+			path(d="M1 3 a2 2 0 1 0 4 0 a2 2 0 1 0 -4 0 M4.5 4.5 L6 6 M2.5 3 L3.5 3", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round")
+		symbol#search(viewbox="0 0 7 7")
 			path(d="M1 3 a2 2 0 1 0 4 0 a2 2 0 1 0 -4 0 M4.5 4.5 L6 6", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round")
-		symbol#rarr-icon(viewbox="0 0 6 6")
+		symbol#rarr(viewbox="0 0 6 6")
 			path(d="M1 3 L5 3 M3.5 1.5 L5 3 M3.5 4.5 L5 3", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round")
 		symbol#spinner(viewBox="0 0 30 30")
-			path(d="M15 25 A 5 5 0 1 1 15 5", stroke="#fff", stroke-width="2", fill="none", stroke-linecap="round")
+			path(d="M15 25 A 5 5 0 1 1 15 5", stroke="currentColor", stroke-width="2", fill="none", stroke-linecap="round")
 		symbol#twitter(viewBox="0 0 24 24")
 			path(d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z", fill="currentColor")
 		symbol#facebook(viewBox="0 0 24 24")
