--- a/src/jade/translate/index.jade
+++ b/src/jade/translate/index.jade
@@ -9,12 +9,10 @@ body.discover
 	+header("translate")
 	+nav()
 	main
-		section
-			.container
-				.page-hero.blue-gradient
-					.container
-						h1 Translate
-						p The Program for Translational Brain Mapping is focused on translating the latest discoveries about human brain function into opportunities to improve patient care.
+		section.page-hero.blue-gradient
+			.container.split
+				h1 Translate
+				p.stretch The Program for Translational Brain Mapping is focused on translating the latest discoveries about human brain function into opportunities to improve patient care.
 		section.news-section
 			.container
 				h2 News
