--- a/src/jade/discover/index.jade
+++ b/src/jade/discover/index.jade
@@ -7,13 +7,12 @@ include ../partials/_footer
 +head("Discover | The Open Brain Project", "Integrating knowledge from the cognitive and brain sciences to open new frontiers in understanding human brain structure and function.")
 body.discover
 	+header("discover")
-	+nav()
 	main
 		section.page-hero.orange-gradient
 			.container.split
 				h1 Discover
 				p.stretch Integrating knowledge from the cognitive and brain sciences to open new frontiers in understanding human brain structure and function.
-		section.news-section
+		section#news.news-section
 			.container
 				h2 News
 				h3 New Research
@@ -43,7 +42,7 @@ body.discover
 					* [Pilot research offers new insights about how the brain fixes itself](https://www.urmc.rochester.edu/news/story/4450/smd-student-david-paul-m.d.-16-wins-national-cadbury-award--for-academic-and-volunteer-achievements.aspx)
 
 
-		section.news-section
+		section#scientific-products.scientific-products-section
 			.container
 				h2 Scientific Products
 				:markdown
@@ -57,10 +56,10 @@ body.discover
 					* Stasenko, A., Garcea, F.E., Dombovy, M., & Mahon, B.Z. (2014). When concepts lose their color: A case of object color knowledge impairment. *Cortex, 58, *217-238. [[pdf]](https://urldefense.proofpoint.com/v2/url?u=https-3A__www.cmu.edu_dietrich_psychology_caoslab_pdf_Stasenko-2520et-2520al.-5FCortex-5F2014.pdf&amp;d=DwMDaQ&amp;c=4sF48jRmVAe_CH-k9mXYXEGfSnM3bY53YSKuLUQRxhA&amp;r=TAQHLsQ3QdWAO1nQ9Yo9NlTO9d-Jr_KEGxWlR5koMsFYLrYE9Bswi7JEFqA29aEK&amp;m=C1top5wUEer2j1A4o51Rw9k-Yr3k3TbZC6lH67nfCGE&amp;s=iaI99cFkHWY0BdoZ9l79BLmFZYtJzzsbizBgD1qXdEA&amp;e=) Supplemental Materials [[pdf]](https://urldefense.proofpoint.com/v2/url?u=https-3A__www.cmu.edu_dietrich_psychology_caoslab_pdf_StasenkoColleagues-5FCortex-5FSupplementalMaterials.pdf&amp;d=DwMDaQ&amp;c=4sF48jRmVAe_CH-k9mXYXEGfSnM3bY53YSKuLUQRxhA&amp;r=TAQHLsQ3QdWAO1nQ9Yo9NlTO9d-Jr_KEGxWlR5koMsFYLrYE9Bswi7JEFqA29aEK&amp;m=C1top5wUEer2j1A4o51Rw9k-Yr3k3TbZC6lH67nfCGE&amp;s=4I6D4vjd8X8PbBDlKz6BB0ecvFehtWR9c1lqEz7ZbRg&amp;e=)
 					* Garcea, F.E., Dombovy, M., & Mahon, B.Z. (2013). Preserved tool knowledge in the context of impaired action knowledge: Implications for models of semantic memory. *Frontiers in Human Neuroscience, 7,* 1-18.
 
-		section.news-section
+		section#resources-for-scientists.resources-for-scientists-section
 			.container
 				h1 Resources for Scientists
-		section.data-sets-section
+		section#data-sets.data-sets-section
 			.container
 				h1 Data Sets
 	
