--- a/src/jade/partials/_header.jade
+++ b/src/jade/partials/_header.jade
@@ -9,6 +9,13 @@ mixin header(pageHeaderTitle)
 					+icon("brain")
 					| The Open Brain Project
 				span.slug= pageHeaderTitle
-			.nav-toggle
+			button.nav-toggle(onClick="toggleNav()")
 				span Menu
 				+icon("menu")
+				+icon("close")
+	+nav()
+	script
+		| var html = document.querySelector("html");
+		| function addNav() { html.classList.add("has-nav"); }
+		| function removeNav() { html.classList.remove("has-nav"); }
+		| function toggleNav() { html.classList.toggle("has-nav"); }
