--- a/src/jade/partials/_svg.jade
+++ b/src/jade/partials/_svg.jade
@@ -2,10 +2,10 @@ mixin svg()
 	svg(style="display: none", xmlns="http://www.w3.org/2000/svg")
 		symbol#menu(viewbox="0 0 6 6")
 			path(d="M1 1.5 L5 1.5 M1 3 L5 3 M1 4.5 L5 4.5", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round")
+		symbol#close(viewbox="0 0 6 6")
+			path(d="M1.5 1.5 L 4.5 4.5, M 4.5 1.5, L 1.5 4.5", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round")
 		symbol#larr(viewbox="0 0 6 6")
 			path(d="M1 3 L5 3 M1 3 L2.5 1.5 M1 3 L2.5 4.5", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round")
-		symbol#close(viewbox="0 0 6 6")
-			path(d="M1 1 L5 5 M5 1 L1 5", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round")
 		symbol#zoom-out(viewbox="0 0 7 7")
 			path(d="M1 3 a2 2 0 1 0 4 0 a2 2 0 1 0 -4 0 M4.5 4.5 L6 6 M2.5 3 L3.5 3", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round")
 		symbol#search(viewbox="0 0 7 7")
