--- a/src/jade/partials/_svg.jade
+++ b/src/jade/partials/_svg.jade
@@ -3,7 +3,7 @@ mixin svg()
 		symbol#menu(viewbox="0 0 6 6")
 			path(d="M1 1.5 L5 1.5 M1 3 L5 3 M1 4.5 L5 4.5", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round")
 		symbol#close(viewbox="0 0 6 6")
-			path(d="M1.5 1.5 L 4.5 4.5, M 4.5 1.5, L 1.5 4.5", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round")
+			path(d="M1.5 1.5L4.5 4.5M4.5 1.5L1.5 4.5", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round")
 		symbol#larr(viewbox="0 0 6 6")
 			path(d="M1 3 L5 3 M1 3 L2.5 1.5 M1 3 L2.5 4.5", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round")
 		symbol#zoom-out(viewbox="0 0 7 7")
