--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -34,7 +34,7 @@
 @mixin gradient($start, $end) {
 	@include shadow(rgba($start, 0.3), 2rem);
 	background-color: $start;
-	background-image: linear-gradient(to top left, transparent, $end);
+	background-image: linear-gradient(to top left, rgba($start, 0), $end);
 
 	&.link-block:hover {
 		@include shadow(rgba($start, 0.6), 2rem);
@@ -193,6 +193,7 @@ input {
 }
 
 button {
+	background: transparent;
 	font: inherit;
 	border: 0;
 }
@@ -229,10 +230,47 @@ button {
 // Header ================================================================================
 header {
 	border-bottom: thin solid $light_gray;
+
+	.container {
+		display: flex;
+		justify-content: space-between;
+	}
+
+	// & > * > * {
+	// 	outline: thin solid red;
+	// }
+
+	.social-link {
+		display: inline-block;
+		vertical-align: middle;
+		color: $black;
+		margin-right: var(--large);
+		line-height: 2.5em;
+		width: 2.5em;
+		text-align: center;
+		cursor: pointer;
+		vertical-align: top;
+		border-radius: 50%;
+
+		.icon {
+			width: 1.25em;
+			height: 1.25em;
+			vertical-align: middle;
+		}
+
+		&:hover {
+			background: $light_gray;
+		}
+
+		@media (min-width: $tablet) {
+			display: inline-block;
+		}
+	}
 }
 
 .site-logo,
-.nav-toggle {
+.nav-toggle,
+.social-link {
 	@media (min-width: $tablet) {
 		font-size: 1.25em;
 	}
@@ -293,8 +331,11 @@ header {
 	cursor: pointer;
 	float: right;
 	vertical-align: top;
+	border-radius: var(--radius);
 
 	&:hover {
+		background: $light_gray;
+
 		span {
 			text-decoration: underline;
 		}
@@ -618,7 +659,7 @@ header {
 
 	$background: mix($white, $black, 90%);
 	background: rgba($background, 0.95);
-	background-image: linear-gradient($background, transparent);
+	background-image: linear-gradient($background, rgba($background, 0));
 	position: fixed;
 	left: var(--large);
 	right: var(--large);
