--- a/src/jade/discover/index.jade
+++ b/src/jade/discover/index.jade
@@ -6,7 +6,7 @@ include ../partials/_footer
 
 +head("Discover | The Open Brain Project", "Integrating knowledge from the cognitive and brain sciences to open new frontiers in understanding human brain structure and function.")
 body.discover
-	+header("discover")
+	+header()
 	main
 		section.page-hero.orange-gradient
 			.container.split
