--- a/src/jade/educate/index.jade
+++ b/src/jade/educate/index.jade
@@ -6,7 +6,7 @@ include ../partials/_footer
 
 +head("Educate | The Open Brain Project", "Connecting patients who have questions to answers, students to educational resources, and scientists to the latest tools for advancing knowledge and care.")
 body.discover
-	+header("educate")
+	+header()
 	main
 		section.page-hero.green-gradient
 			.container.split
@@ -15,6 +15,9 @@ body.discover
 		section.resources-for-patients-section
 			.container
 				h2 Resources for Patients
+		section.explore-the-human-brain-section
+			.container
+				h2 Explore the Human Brain
 	
 	+footer()
 			
