--- a/src/jade/translate/index.jade
+++ b/src/jade/translate/index.jade
@@ -6,7 +6,7 @@ include ../partials/_footer
 
 +head("Translate | The Open Brain Project", "The Program for Translational Brain Mapping is focused on translating the latest discoveries about human brain function into opportunities to improve patient care.")
 body.discover
-	+header("translate")
+	+header()
 	main
 		section.page-hero.blue-gradient
 			.container.split
